# pr-sentinel

./: .env.example  .gitignore  CLAUDE.md  README.md  plan.md  pyproject.toml  railway.toml
docs/: phase1.md  phase2.md  phase3.md
src/: checkpointer.py  main.py
src/agent/: graph.py  nodes.py  prompts.py  router.py  state.py
src/github/: client.py  diff.py  webhook.py
tests/: conftest.py  test_diff.py  test_evaluate.py  test_nodes.py  test_router.py  test_webhook.py
tests/fixtures/: sample_diff_small.patch  sample_webhook_payload.json
